# ontology-platform

./: .gitignore  00_PROJECT_ROADMAP_MVP_1_TO_5.md  01_BACKEND_AGENT_SKILL.md  02_FRONTEND_AGENT_SKILL.md  03_PM_AGENT_SKILL.md  04_MVP6_PRODUCTIZATION_AND_ADVANCED_KNOWLEDGE_OPS.md  AGENTS.md  README.md
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: router.py
apps/backend/app/core/: config.py  enums.py  errors.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/integrations/llm/: base.py  mock_provider.py
apps/backend/app/modules/audit/: models.py  router.py  schemas.py  service.py
apps/backend/app/modules/auth/: __init__.py  router.py  schemas.py
apps/backend/app/modules/benchmark/: router.py  schemas.py  service.py
apps/backend/app/modules/candidate/: models.py  router.py  schemas.py  service.py
apps/backend/scripts/: export_openapi.py  seed_mvp1.py  seed_mvp3.py  seed_mvp4.py  seed_mvp5.py  verify_mvp4_quality_metrics.py
apps/backend/tests/: test_mvp3_api.py  test_mvp4_api.py  test_mvp5_api.py  test_mvp6_10_tenancy_api.py  test_mvp6_11_ontology_packs_api.py  test_mvp6_12_graph_viz_api.py  test_mvp6_2_learning_api.py  test_mvp6_3_benchmark_api.py  test_mvp6_4_goldset_authoring_api.py  test_mvp6_5_governance_api.py  test_mvp6_6_governance_application_api.py  test_mvp6_7_impact_simulation_api.py  test_mvp6_8_copilot_api.py  test_mvp6_9_connectors_api.py  test_mvp6_evaluation_api.py  test_project_ontology_api.py
(+656 files in other folders)
